Changes made to graph render - created new file, replaced scala with javascript

--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -335,7 +335,7 @@
             <li role="tab3">
 			
 			@if(FINAL_ALL_PATHS.size()>0){
-              	 <a href="/impact/graph" target="_blank" style="    font-weight: bold;font-size: large;">View Path Flows*</a>
+              	 <a href="/ajax/@ajax_CLIENT_IP/graph" target="_blank" style="    font-weight: bold;font-size: large;">View Path Flows*</a>
 						}
            </li>
           </ul>
