--- a/app/views/vibhor_helper.scala.html
+++ b/app/views/vibhor_helper.scala.html
@@ -59,14 +59,9 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" style="color: black;">String</label>
 					<div class="col-md-12">
-				 
-						@if(CURRENT_PATH.size() > 0){
-						<input id="searchString" type="text" class="form-control" placeholder="@CURRENT_PATH.get(CURRENT_PATH.size()-1)" name="searchString" disabled>
-						}else{
-						<input id="searchString" type="text" class="form-control" placeholder="" name="searchString" disabled>
-						}
-						
-						<label style="color: black;" >Release</label>	
+
+						<input id="searchString" type="text" class="form-control" placeholder="Type in a string" name="searchString">
+						<label style="color: black;" >Release</label>
 						<select id="repoList" class="form-control"  name="repoList" disabled>
 						  <!-- <option selected="selected" value=""> </option>	
 						@for(dir <- selectRepoList){
