"View Path Flow" modified to a button with improved UI

--- a/app/views/vibhor.scala.html
+++ b/app/views/vibhor.scala.html
@@ -338,10 +338,12 @@
                       <!--   <li role="tab2">
             <a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab">Utilities</a>
             </li> -->
-                    <li role="tab3">
+                    <li role="tab3" style="margin:10 0 5 10;">
 
                     @if(FINAL_ALL_PATHS.size()>0){
-                      <a href="/ajax/@ajax_CLIENT_IP/graph" target="_blank" style="font-weight: bold;font-size: large;">View Path Flows*</a>
+                      <button id="view_path_flows_btn" type="button" onclick="window.open('/ajax/@ajax_CLIENT_IP/graph')" class="btn btn-viewPathFlows btn-vibrate" style="width: 100%;margin-left: 0;">View Path Flows</button>
+                    }else{
+                      <button id="view_path_flows_btn" type="button" class="btn btn-viewPathFlows" style="width: 100%;margin-left: 0;" disabled>View Path Flows</button>
                     }
                     </li>
                   </ul>
