--- a/public/stylesheets/flat-admin.css
+++ b/public/stylesheets/flat-admin.css
@@ -16201,3 +16201,28 @@ footer.app-footer {
     100% { transform: rotate(360deg); }
 }
 #box { width:250px;height:250px;background:#f8f8f8;position:relative;color:#666;font-size:18px;border:1px solid #333; }
+.btn-viewPathFlows {
+  border-color: #bf4b3f;
+  border-bottom-color: #ffaa79;
+  background-color: #bf4b3f;
+  box-shadow: 0 2px 3px rgba(252, 130, 41, 0.3);
+  color: white;
+}
+.btn-vibrate {
+  animation: shake 0.5s;
+  animation-iteration-count: 4;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
